--- a/gitlab-handbook-chatbot/.gitignore
+++ b/gitlab-handbook-chatbot/.gitignore
@@ -6,3 +6,31 @@
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
+.venv
+//.idea
+.DS_Store
+node_modules
+dist
+.env
+.env.local
+.env.*.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.vscode
+*.code-workspace
+*.sublime-project
+*.sublime-workspace
+*.log
+coverage
+.cache
+.next
+out
+build
+*.tsbuildinfo
+.idea/
+*.iml
+*.iws
+*.ipr
+# Mac system files
