added pinecone support

--- a/gitlab-handbook-chatbot/requirements.txt
+++ b/gitlab-handbook-chatbot/requirements.txt
@@ -1,7 +1,8 @@
+python-dotenv
 streamlit==1.38.0
 trafilatura==1.8.0
 beautifulsoup4==4.12.3
-faiss-cpu==1.12.0
+pinecone-client==3.2.2
 sentence-transformers==3.0.1
 google-generativeai==0.7.2
 pydantic==2.8.2
