--- a/gitlab-handbook-chatbot/.gitignore
+++ b/gitlab-handbook-chatbot/.gitignore
@@ -7,7 +7,7 @@
 /dataSources/
 /dataSources.local.xml
 .venv
-//.idea
+/.idea
 .DS_Store
 node_modules
 dist
@@ -33,4 +33,6 @@ build
 *.iml
 *.iws
 *.ipr
-# Mac system files
+.DS_Store
+__pycache__/
+*.pyc
