--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,38 @@
-/.idea/
+# Default ignored files
+/shelf/
+/workspace.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+.venv
+/.idea
+.DS_Store
+node_modules
+dist
+.env
+.env.local
+.env.*.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.vscode
+*.code-workspace
+*.sublime-project
+*.sublime-workspace
+*.log
+coverage
+.cache
+.next
+out
+build
+*.tsbuildinfo
+.idea/
+*.iml
+*.iws
+*.ipr
+.DS_Store
+__pycache__/
+*.pyc
